# gotchi-game

./: LICENSE  README.md  data.json  pyproject.toml  requirements.txt
.github/workflows/: coverage.yml  coverage_pytest.yml  pylint.yml  pytest.yml
gotchi/: __init__.py  auth.py  db.py  game.py  gameplay_config.py  gameplay_functions.py  home.py  schema.sql
gotchi/background_tasks/: hunger.py  task_manager.py
gotchi/templates/: base.html
gotchi/templates/auth/: delete_account.html
gotchi/templates/game/: delete.html  index.html  new.html  play.html
gotchi/templates/game/partials/: feed.html  sprite.html  stats.html
gotchi/templates/home/: index.html
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_df85dbf5b25cd3f5___init___py.html  z_df85dbf5b25cd3f5_auth_py.html  z_df85dbf5b25cd3f5_db_py.html  z_df85dbf5b25cd3f5_extensions_py.html  z_df85dbf5b25cd3f5_game_py.html  z_df85dbf5b25cd3f5_gameplay_config_py.html  z_df85dbf5b25cd3f5_gameplay_functions_py.html  z_df85dbf5b25cd3f5_home_py.html  z_fb491f7a6b5efe9d_hunger_py.html
tests/: conftest.py  data.sql  test_auth.py  test_db.py  test_factory.py  test_gameplay_functions.py  test_home.py
