[project]
name = "gotchi"
version = "1.0.0"
description = "Web game inspired by tamogotchi games"
dependencies = [
    "flask", "python-dateutil", "Flask-APScheduler"
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["gotchi"]
relative_files = true